# lingmo-terminal

./: CMakeLists.txt
.github/workflows/: build.yml  package.yml
debian/: changelog  control  copyright
qmltermwidget/: CMakeLists.txt
qmltermwidget/lib/: ColorScheme.cpp  Emulation.cpp  Filter.cpp  Filter.h  HistorySearch.cpp  HistorySearch.h  KeyboardTranslator.cpp  ProcessInfo.cpp  SearchBar.h  Session.cpp  TerminalDisplay.cpp  qtermwidget.cpp
qmltermwidget/src/: ksession.cpp
rpm/: lingmo-terminal.spec
